<package format="2">
  <name>mav_integral_disturbance_observer_first_order</name>
  <version>1.0.0</version>
  <description>mav disturbance observers libraries, based on work by Mina Kamel et al.</description>

  <maintainer email="hideyoshi.cheong@gmail.com">Hideyoshi Cheong</maintainer>

  <author>Hideyoshi Cheong</author>

  <author>Mina Kamel</author>
  <author>Fadri Furrer</author>
  <author>Michael Burri</author>
  <author>Janosch Nikolic</author>
  <author>Markus Achtelik</author>

  <license>ASL 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>dynamic_reconfigure</depend>
  <depend>mav_msgs</depend>
  <depend>roscpp</depend>
  <depend>cmake_modules</depend>
  <depend>tf</depend>
  <depend>message_generation</depend>
</package>
